--- a/templates/views/article_zero_trust_homelab_v2.templ
+++ b/templates/views/article_zero_trust_homelab_v2.templ
@@ -28,10 +28,9 @@ templ ArticleZeroTrustHomelabV2() {
 						<h1 class="text-3xl font-semibold leading-tight">{ zeroTrustHomelabV2Metadata.Name }</h1>
 					</header>
 
-                    <h2 id="motivation" class="text-2xl font-bold mt-8 mb-4 group flex items-center">
-                        Motivation 
-                        <a href="#motivation" class="ml-2 text-blue-600 hover:text-blue-800 text-lg cursor-pointer" aria-label="Link to Motivation">
-                            #
+                    <h2 id="motivation" class="text-2xl font-bold mt-8 mb-4 group">
+                        <a href="#motivation" class="text-gray-900 hover:text-blue-600 cursor-pointer" aria-label="Link to Motivation">
+                            Motivation
                         </a>
                     </h2>
 
@@ -73,10 +72,9 @@ templ ArticleZeroTrustHomelabV2() {
                        All these points led me to think how to adjust the setup and make it more robust and easier to manage. 
                     </p>
 
-                    <h2 id="new-setup" class="text-2xl font-bold mt-8 mb-4 group flex items-center">
-                        New Setup 
-                        <a href="#new-setup" class="ml-2 text-blue-600 hover:text-blue-800 text-lg cursor-pointer" aria-label="Link to New Setup">
-                            #
+                    <h2 id="new-setup" class="text-2xl font-bold mt-8 mb-4 group">
+                        <a href="#new-setup" class="text-gray-900 hover:text-blue-600 cursor-pointer" aria-label="Link to New Setup">
+                            New Setup
                         </a>
                     </h2>
                     <p class="mt-0 mb-0">
