--- a/templates/views/article_zero_trust_homelab.templ
+++ b/templates/views/article_zero_trust_homelab.templ
@@ -18,9 +18,9 @@ templ ArticleZeroTrustHomelab() {
 				<div class="mx-auto w-4/5 md:w-1/2 space-y-8 py-12 font-medium">
 					<div class="mb-8 flex justify-center">
 						@button.Button(button.Props{
-							Href: "/p/public/landing-page",
+							Href: "/p/public/articles",
 						}) {
-                            Go Back Home
+                            Go Back to Articles
 						}
 					</div>
 
