feat: add the fluxcd diagram
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/views/article_zero_trust_homelab_v2.templ
+++ b/templates/views/article_zero_trust_homelab_v2.templ
@@ -78,6 +78,7 @@ templ ArticleZeroTrustHomelabV2() {
                         </a>
                     </h2>
                     <p class="mt-0 mb-0">
+                        <img class="w-full h-auto my-6" src="https://static.blog.ip812.com/zero-trust-homelab-v2-fluxcd-architecture.png" alt="FluxCD setup"/>
                        At the beginning I had in mind to use FluxCD to manage the cluster, which has some obvious advantages.
                        Very popular GitOps tool (I thought to use ArgoCD at the beginning, but it requires too much resources for my small instance), that can easily manage the cluster via git repos.
                        It is designed to manage Kubernetes resources and Helm charts, so it is ideal for my use case. 
