--- a/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
+++ b/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
@@ -27,26 +27,39 @@ templ ArticleAnsiblePlusTailscaleEqualGreatCombo() {
 					<header class="flex flex-col w-full justify-center items-center mb-2">
 						<h1 class="text-3xl font-semibold leading-tight">{ ansiblePlusTailsclaleEqualGreatComboIDMetadata.Name }</h1>
 					</header>
+                    ref - https://chatgpt.com/c/68f2b0e3-f068-832d-bcb6-4f36360c93f6
+				    <p class="my-0">
+						So now let's deep dive into the setup.
+                        The idea is that if a machine is added to out Tailscale network and if ssh access is enabled for that machine, Ansible should be able to connect to it, because Ansible uses SSH for connecting to remote hosts by using push model.
+                        So in order to run Ansible every time we make a change to out configuration, we will add a GitHub Action workflow that will be triggered every time we push a change to our repository.
+                        In order the Github Action runner to be able to connect to our Tailscale network, we will add the runner temporary to our Tailscale network by using Tailscale's GitHub Action.
+					</p>
+
+				    <p class="mt-4">
+						The goal of this demo project is to configure 2 VMs on AWS to:
+                        - Configure both VM with some basic utilitis like tmux, vim jq, etc.
+                        - Install Docker on both VMs uisng Ansible's Docker plugins in galaxy.
+                        - Run on one of the VMs 2 Nginx containers and on the other VM run 2 Traefik containers.
+                        - Everything while the VM can't be accessed from the public internet, only via Tailscale.
+					</p>
 					<div class="mt-6">
 						@code.Code(code.Props{
-							Language:       "go",
+							Language:       "yaml",
 							ShowCopyButton: true,
 							Size:           code.SizeSm,
 						}) {
 							{ 
 `package main
+roles:
+  - name: geerlingguy.docker
+    version: 7.4.1
 
-import "fmt"
-
-func main() {
-    fmt.Println("Hello, World!")
+collections:
+  - name: community.docker
+    version: ">=3.0.0"
 }` }
 						}
 					</div>
-					<img class="w-full h-auto my-6" src="https://www.jaegertracing.io//img/jaeger-logo.png" alt="Placeholder article"/>
-					<p>
-						Some Go code.
-					</p>
 
 					<div class="mt-12">
 						<h2 class="text-2xl font-bold mb-4">Comments</h2>
