--- a/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
+++ b/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
@@ -49,15 +49,13 @@ templ ArticleAnsiblePlusTailscaleEqualGreatCombo() {
 							Size:           code.SizeSm,
 						}) {
 							{ 
-`package main
-roles:
+`roles:
   - name: geerlingguy.docker
     version: 7.4.1
 
 collections:
   - name: community.docker
-    version: ">=3.0.0"
-}` }
+    version: ">=3.0.0"` }
 						}
 					</div>
 
