--- a/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
+++ b/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
@@ -1,7 +1,8 @@
 package views
 
 import (
-    "fmt"
+	"fmt"
+
 	"github.com/ip812/blog/articles"
 	"github.com/ip812/blog/templates"
 	"github.com/ip812/blog/templates/components"
@@ -28,41 +29,35 @@ templ ArticleAnsiblePlusTailscaleEqualGreatCombo() {
 						<h1 class="text-3xl font-semibold leading-tight">{ ansiblePlusTailsclaleEqualGreatComboIDMetadata.Name }</h1>
 					</header>
 
-				    <p class="my-0">
-                        Before diving into the concrete setup I want to explain shortly why you might need such solution after all.
-                        At the begiing the way people configuring remote machines were to manually go to the machines run some commands and call the day.
-                        When the thing becaume to repetative and the number of machines grew, people started to write custom Shell scripts to automate the process.
-                        But this created other issue - now there were a lot of small scripts everywhere, everyone had their own way of doing things and it was hard to maintain.
-                        People then decided that it is time to make some more universal and robust way of managing their servers - the came the era of config management tools like Ansible, Puppet, Chef, Salt and etc.
-                        The next logical think that came after Docker came to the scene was orchestrators most popular of which is Kubernetes.
-                        The whole idea of Kubernetes was to include best practices for running containers and overall software on servers in a way that it allows the apps to run in distributed fashion and to be able to scale up and down as needed.
-                        This is great solution when you have hundreds or thousands of machines to manage. The goal of Kubernetes is to create abstraction over the underlying infra and for the user it not no matter how much machines are running,
-                        is some machine down, is some machine patching and so on. The idea is to hide everything under some API and Kubernetes to manage the indvidiual machines and for the users to nbe important I want to run application A and thats it.
-                        Now the logical question arrise - is this abstraction needed in every case. And the answear is no - you have a single or a few machines this is overkill, you don't need that extra comlexity, because it doen't bring value to you.
-                        In such cases conifig management tools in my opinion are more than enough to fulfill your needs.
-                        And in this blog post I will show you how with Ansible you can manage docker containers on a remote host/hosts and even more- how this machines can be in private networks and access them via Tailscale
-                        so to avaoid the need of open ports or management of SSH keys.
+					<p class="my-0">
+						Before we jump into the concrete setup, here’s a short explanation of why you might want this solution.
+						Originally, remote machines were configured manually — you logged in, ran commands, and called it a day.
+						As the number of machines grew and tasks became repetitive, people began writing ad-hoc shell scripts to automate them.
+						That created another problem: many scattered scripts, each with its own conventions, which made maintenance hard.
+						To solve that, teams adopted configuration-management tools like Ansible, Puppet, Chef, and Salt.
+						Later, containerization and orchestration arrived (Docker and then Kubernetes). Kubernetes introduces useful abstractions for running and scaling distributed applications and is great when you manage hundreds or thousands of nodes.
+						However, that abstraction and the added complexity are not always worth it — for small deployments (a single machine or a few machines), Kubernetes can be overkill.
+						In those cases, a configuration-management approach like Ansible is usually simpler and sufficient.
+						In this post I’ll show how to use Ansible to manage Docker containers on remote hosts that live in private networks — and how to access them securely using Tailscale so you don’t need to open public ports or manage SSH keys manually.
 					</p>
 
-				    <p class="my-0">
-						So now let's deep dive into the setup.
-                        The idea is that if a machine is added to out Tailscale network and if ssh access is enabled for that machine, Ansible should be able to connect to it, because Ansible uses SSH for connecting to remote hosts by using push model.
-                        So in order to run Ansible every time we make a change to out configuration, we will add a GitHub Action workflow that will be triggered every time we push a change to our repository.
-                        In order the Github Action runner to be able to connect to our Tailscale network, we will add the runner temporary to our Tailscale network by using Tailscale's GitHub Action.
+					<p class="mt-4 mb-0">
+						The idea is simple: if a machine is joined to our Tailscale network and SSH access is enabled, Ansible can connect to it because Ansible uses SSH.
+						To run Ansible automatically whenever we change our repository, we’ll add a GitHub Actions workflow that runs on push.
+						For the workflow runner to reach machines on Tailscale, we’ll temporarily add the runner to our Tailscale network using Tailscale’s GitHub Action.
+						This demo configures two AWS VMs to:
+					</p>
+                    <ul class="list-disc list-inside my-0">
+						<li>Install common utilities (tmux, vim, jq, etc.)</li>
+						<li>Install Docker using Ansible roles/collections</li>
+						<li>Run two Nginx containers on one VM and two Traefik containers on the other</li>
+						<li>Keep both VMs inaccessible from the public internet — reachable only via Tailscale</li>
+					</ul>
+					<p class="mt-4 mb-0">
+						Below is the Ansible setup used in the demo.
 					</p>
 
-				    <p class="mt-4">
-						The goal of this demo project is to configure 2 VMs on AWS to:
-                        - Configure both VM with some basic utilitis like tmux, vim jq, etc.
-                        - Install Docker on both VMs uisng Ansible's Docker plugins in galaxy.
-                        - Run on one of the VMs 2 Nginx containers and on the other VM run 2 Traefik containers.
-                        - Everything while the VM can't be accessed from the public internet, only via Tailscale.
-					</p>
-
-				    <p class="mt-4">
-                        So here’s what this Ansible setup is doing. 
-					</p>
-					<div class="mt-6">
+					<div class="my-0">
 						@code.Code(code.Props{
 							Language:       "yaml",
 							ShowCopyButton: true,
@@ -75,11 +70,11 @@ a1 ansible_host=aws-worker-1
 a2 ansible_host=aws-worker-2` }
 						}
 					</div>
-				    <p class="mt-4">
-                        First off, there’s an inventory — that’s how Ansible knows what machines exist and how to reach them.
-                        Here, we have two machines — a1 and a2 — grouped under [workers].
-                        When you run a playbook, you can target either the entire group (workers) or individual hosts.
-                        Here the aws-worker-1 and aws-worker-2 are the MagicDNS hostnames for the two VMs, but you can use the IP addresses as well.
+
+					<p class="mt-4">
+						This is the inventory — how Ansible knows what hosts exist and how to reach them.
+						We have two hosts (a1 and a2) in the <code>workers</code> group. When running playbooks you can target the group or individual hosts.
+						The <code>aws-worker-1</code> and <code>aws-worker-2</code> entries are the MagicDNS hostnames assigned by Tailscale; you could also use IP addresses.
 					</p>
 
 					<div class="mt-6">
@@ -99,10 +94,10 @@ collections:
     version: ">=3.0.0"` }
 						}
 					</div>
-				    <p class="mt-4">
-                        The requirements.yml file is used to define the roles and collections that are needed for the playbook.
-                        In this case, we need the geerlingguy.docker role to install Docker on the machines.
-                        And we need the community.docker collection to enable Ansible to interact with Docker.
+
+					<p class="mt-4">
+						The <code>requirements.yml</code> file lists the Ansible roles and collections required by the playbooks.
+						Here we use <code>geerlingguy.docker</code> to install Docker and <code>community.docker</code> to interact with Docker from Ansible.
 					</p>
 
 					<div class="mt-6">
@@ -133,12 +128,10 @@ collections:
     - traefik` }
 						}
 					</div>
-				    <p class="mt-4">
-                        This is the playbook that will be used to configure the two VMs.
-                        It runs the base role to install some basic utilities and the geerlingguy.docker role to install Docker on both machines.
-                        Then it configures Nginx on the first machine and Traefik on the second machine.
-					</p>
 
+					<p class="mt-4">
+						This playbook installs common utilities and Docker on both hosts (the <code>base</code> and <code>geerlingguy.docker</code> roles), then configures Nginx on <code>a1</code> and Traefik on <code>a2</code>.
+					</p>
 
 					<div class="mt-6">
 						@code.Code(code.Props{
@@ -157,12 +150,13 @@ collections:
     state: present` }
 						}
 					</div>
-				    <p class="mt-4">
-                        This role is used to install tmux, vim, jq.
+
+					<p class="mt-4">
+						The <code>base</code> role installs common utilities such as <code>tmux</code>, <code>vim</code>, and <code>jq</code>.
 					</p>
 
-				    <p class="mt-4">
-                        Now I will describe the process for Nginx, for Traefik it is similar. 
+					<p class="mt-4">
+						Below are the Nginx tasks. Traefik is set up in a similar way.
 					</p>
 
 					<div class="mt-6">
@@ -180,6 +174,7 @@ collections:
   import_tasks: nginx_latest.yml` }
 						}
 					</div>
+
 					<div class="mt-6">
 						@code.Code(code.Props{
 							Language:       "yaml",
@@ -198,6 +193,7 @@ collections:
     restart_policy: no` }
 						}
 					</div>
+
 					<div class="mt-6">
 						@code.Code(code.Props{
 							Language:       "yaml",
@@ -216,25 +212,18 @@ collections:
     restart_policy: no` }
 						}
 					</div>
-				    <p class="mt-4">
-                        Here in the main.yml file we are importing the tasks for the Alpine and Latest versions of Nginx.
-                        And we see that in the alpine file we are starting the nginx:alpine container on port 8080 and in the latest file we are starting the nginx:latest container on port 8081.
-                        For Traefik it is similar.
+
+					<p class="mt-4">
+						We import two task files that start <code>nginx:alpine</code> (exposed on port <code>8080</code>) and <code>nginx:latest</code> (exposed on port <code>8081</code>).
+						Traefik is configured in a comparable way on the other host.
 					</p>
 
-				    <p class="mt-4">
-                        This is the Ansible setup, but we didn't discuss somehitng important yet.
-                        Ansible uses SSH to connect to the remote hosts so in tipical setup we should do 2 things;
-                        - Add a SSH key to the remote host so that Ansible can connect to it.
-                        - Open port 22 on the remote host so that Ansible can connect to it.
-                        In practice this creates some problems like now we have npw to manage a securly SSH keys and the open port 22 creates a security risk.
-                        So to solve this problem we can use Tailscale to connect to the remote host.
-                        Tailscale is a mesh VPN that allows you to connect to the remote host without opening any ports.
-                        With it we can run our Ansible playbook on the remote host without opening any ports.
-                        To achive this 2 things are requred.
-                        - We need to install Tailscale on the remote host and to add it to our Tailscale network using --ssh flag in order to allow Ansible to connect to it via SSH.
-                          It minmal setup should looks like this:
+					<p class="mt-4">
+						One important operational detail: Ansible connects over SSH. A typical setup requires either opening port 22 or provisioning SSH keys on every host — both of which add operational overhead and increase the attack surface.
+						Instead, we’ll use Tailscale (a mesh VPN) so the hosts don't need public ports. With Tailscale + its SSH support enabled on the host, Ansible can reach the machines over the private Tailscale network.
+						At minimum, install Tailscale and join the host to your Tailscale network with the <code>--ssh</code> flag. A minimal setup looks like:
 					</p>
+
 					<div class="mt-6">
 						@code.Code(code.Props{
 							Language:       "bash",
@@ -251,11 +240,17 @@ curl -fsSL https://tailscale.com/install.sh | sh
 tailscale up --authkey TAILSCALE_AUTH_KEY --hostname aws-worker-1 --ssh` }
 						}
 					</div>
-                    <p class="mt-4">
-                        SO everything to be automatic we will create a GitHub Action workflow that will be triggered every time we push a change to our repository that will run the Ansible playbook on the remote hosts.
-                        In order to achive this we have to add the GitHub Action runner to our Tailscale network temporarily and then run the Ansible playbook on the remote hosts.
-                        The setup should look like this:
-                    </p>
+
+					<p class="mt-4">
+						To automate execution from CI, create a GitHub Actions workflow that:
+						<ol class="list-decimal list-inside mt-2">
+							<li>Checks out the repository</li>
+							<li>Adds the runner to your Tailscale network (temporarily) using the Tailscale GitHub Action</li>
+							<li>Installs Ansible roles</li>
+							<li>Runs the Ansible playbook against the Tailscale-accessible hosts</li>
+						</ol>
+					</p>
+
 					<div class="mt-6">
 						@code.Code(code.Props{
 							Language:       "yaml",
@@ -306,42 +301,43 @@ jobs:
 						}
 					</div>
 
-                    <p class="mt-4 mb-0">
-                        So this is how you can use Ansible and Tailscale to manage your infrastructure without opening any ports to the public internet.
-                    </p>
-                    <ul class="list-disc list-inside mt-0 mb-0">
-                        <li>
-                            You can find the source code for this project
-                            <a href="https://github.com/ip812/infra/tree/002fd55652cd9c85fa288119230138fa775742c0" class="text-blue-600 hover:underline" target="_blank" rel="noopener noreferrer"> 
-                                here
-                            </a>.
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/watch?v=9ZkzPYZTazY" class="text-blue-600 hover:underline" target="_blank" rel="noopener noreferrer"> 
-                                Here
-                            </a>
-                            I recorded a video showing how to setup Tailscale and GitHub Action runner to run the Ansible playbook on the remote hosts.
-                            If you have any questions or suggestions, feel free to connect with me on the social media or to write a comment below.
-                        </li>
-                    </ul>
+					<p class="mt-4 mb-0">
+						That’s the gist of it: use Tailscale to avoid exposing SSH to the internet, and use a temporary, Tailscale-connected GitHub Actions runner to run Ansible against private hosts.
+					</p>
+
+					<ul class="list-disc list-inside mt-0 mb-0">
+						<li>
+							You can find the source code for this project
+							<a href="https://github.com/ip812/infra/tree/002fd55652cd9c85fa288119230138fa775742c0" class="text-blue-600 hover:underline" target="_blank" rel="noopener noreferrer">
+								here
+							</a>.
+						</li>
+						<li>
+							I also recorded a walkthrough video showing how to set up Tailscale and a GitHub Actions runner to run the Ansible playbook:
+							<a href="https://www.youtube.com/watch?v=9ZkzPYZTazY" class="text-blue-600 hover:underline" target="_blank" rel="noopener noreferrer">
+								Watch the video
+							</a>.
+							If you have questions or suggestions, feel free to comment below or reach out on social media.
+						</li>
+					</ul>
 
 					<div class="mt-12">
 						<h2 class="text-2xl font-bold mb-4">Comments</h2>
 						<hr class="border-t-2 border-gray-300 mb-6"/>
-                        @components.CommentInputForm(components.CommentInputFormProps{
-                            ArticleID: articles.AnsiblePlusTailsclaleEqualGreatComboID,
-                        })
-                        <div 
-                            id="comments"
-                            hx-get={ fmt.Sprintf("/api/public/v0/articles/%d/comments", articles.AnsiblePlusTailsclaleEqualGreatComboID) }
-		                    hx-target="#comments"
-		                    hx-swap="innerHTML"
-                            hx-trigger="load"
-                        >
-                            <div class="mt-4">
-                                @templates.Spinner() {}
-                            </div>
-                        </div>
+						@components.CommentInputForm(components.CommentInputFormProps{
+							ArticleID: articles.AnsiblePlusTailsclaleEqualGreatComboID,
+						})
+						<div
+							id="comments"
+							hx-get={fmt.Sprintf("/api/public/v0/articles/%d/comments", articles.AnsiblePlusTailsclaleEqualGreatComboID)}
+							hx-target="#comments"
+							hx-swap="innerHTML"
+							hx-trigger="load"
+						>
+							<div class="mt-4">
+								@templates.Spinner() {}
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
